--- a/my-vue-app/package.json
+++ b/my-vue-app/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
     "bootstrap": "^5.2.3",
+    "daisyui": "^2.46.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
