--- a/my-vue-app/package.json
+++ b/my-vue-app/package.json
@@ -17,6 +17,7 @@
     "daisyui": "^2.46.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^5.2.0",
     "reactjs-popup": "^2.0.5"
   },
