--- a/my-vue-app/package.json
+++ b/my-vue-app/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.10.17",
     "bootstrap": "^5.2.3",
     "daisyui": "^2.46.1",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
